Migrate some things around