@@ -8,7 +8,6 @@ import me.videogamesm12.w2k.drivers.v1_20_1.mixin.accessor.WorldAccessor;
 import me.videogamesm12.w2k.kernel.W2K;
 import me.videogamesm12.w2k.kernel.data.*;
 import me.videogamesm12.w2k.kernel.driver.base.WDriverMetadata;
-import me.videogamesm12.w2k.kernel.driver.base.WVersionBridgeDriver;
 import me.videogamesm12.w2k.kernel.util.ComponentUtils;
 import net.kyori.adventure.text.Component;
 import net.minecraft.block.entity.BlockEntity;
@@ -29,7 +28,7 @@ import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 @WDriverMetadata(identifier = "120_version_bridge")
-public class W120VersionBridgeDriver implements WVersionBridgeDriver
+public class WVersionBridgeDriver implements me.videogamesm12.w2k.kernel.driver.base.WVersionBridgeDriver
 {
     @Override
     public void disconnect()
@@ -120,20 +119,15 @@ public class W120VersionBridgeDriver implements WVersionBridgeDriver
     }
 
     @Override
-    public List<PlayerEntry> getOnlinePlayers()
+    public List<IPlayerEntry> getPlayerList()
     {
         if (MinecraftClient.getInstance().getNetworkHandler() == null)
         {
             return Collections.emptyList();
         }
 
-        return MinecraftClient.getInstance().getNetworkHandler().getPlayerList().stream().map(entry ->
-                new PlayerEntry(entry.getProfile(),
-                        Text.Serializer.toJsonTree(entry.getDisplayName() != null ?
-                                entry.getDisplayName() : Text.literal(entry.getProfile().getName())),
-                        entry.getLatency(),
-                        entry.getGameMode() != null ? entry.getGameMode().getName() : "", entry.getModel(),
-                        entry.getSkinTexture().toString())).collect(Collectors.toList());
+        return MinecraftClient.getInstance().getNetworkHandler().getPlayerList().stream()
+                .map(entry -> (IPlayerEntry) entry).toList();
     }
 
     @Override
